--- a/style-index.css
+++ b/style-index.css
@@ -255,6 +255,11 @@ footer div p a {
 
     }
 
+    div span:hover {
+        width: 145px;
+        height: 145px;
+    }
+
     footer { 
         font-size: 20px;
 
@@ -288,6 +293,11 @@ footer div p a {
         height: 100px;
         cursor: pointer;
         font-size: 12px;
+    }
+
+    div span:hover {
+        width: 95px;
+        height: 95px;
     }
 
     section span p {
