--- a/style-servicios.css
+++ b/style-servicios.css
@@ -132,6 +132,16 @@ aside {
     margin-bottom: 50px;
 }
 
+div span:hover {
+    border-radius: 10px;
+    width: 190px;
+    height: 190px;
+    border-color: darkcyan;
+    border-style: outset;
+    background-color: darkcyan;
+    transition: all, 1s;
+}
+
 .empeza { 
     height: 200px;
     color: black;
@@ -199,6 +209,11 @@ footer div p a {
         font-size: 15px;
     }
 
+    div span:hover {
+        width: 145px;
+        height: 145px;
+    }
+
     footer { 
         font-size: 20px;
 
@@ -233,6 +248,11 @@ footer div p a {
         font-size: 15px;
     }
 
+    div span:hover {
+        width: 95px;
+        height: 95px;
+    }
+    
     section span p {
         margin-left: 20px;
         font-size: 15px;
