--- a/style-quienes-somos.css
+++ b/style-quienes-somos.css
@@ -84,9 +84,21 @@ aside {
     height: 350px;
     color: white;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
     padding: 0 50px;
     background-color: rgb(22, 98, 121);
+
+}
+
+div article h3 {
+    margin-top: 30px;
+    text-align: center;
+}
+
+div article p {
+    display: grid;
+    font-size: 16px;
+    margin: 50px 20px;
+    justify-items: center;
 
 }
 
