--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 
-
+@import './variable.scss';
 @import './_global.scss';
-@import './_style-index.scss';
+@import './header.scss';
+@import './style-index';
