--- a/style-index.css
+++ b/style-index.css
@@ -12,7 +12,7 @@ header nav ul {
     justify-content: center;
 } 
 
-.lista1 {
+header nav ul li {
     font-size: 20px;
     padding: 0 8px;
     margin: 0 10px;
