--- a/scss/_style-index.scss
+++ b/scss/_style-index.scss
@@ -43,14 +43,14 @@ aside {
     font-size: 18px;
 }    
 
-.hero__buttom--pointer {
-    padding: 10px 50px;
-    cursor: pointer;
-    color: white;
-    font-weight: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: black;
-}
+// .hero__buttom--pointer {
+//     padding: 10px 50px;
+//     cursor: pointer;
+//     color: white;
+//     font-weight: bold;
+//     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+//     background-color: black;
+// }
 
 
 .service { 
