inicio 3er entrega final

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 
 @import './variable.scss';
-@import './_global.scss';
+@import './global.scss';
 @import './header.scss';
 @import './style-index';
+@import './style-quienesSomos';
