armando estructura para quienes-somos

--- a/scss/style-quienes-somos.scss
+++ b/scss/style-quienes-somos.scss
@@ -1,6 +1,5 @@
-
 @import './variable.scss';
 @import './global.scss';
 @import './header.scss';
 @import './footer.scss';
-@import './style-index';
+@import './style-quienesSomos';
