--- a/scss/style-quienes-somos.scss
+++ b/scss/style-quienes-somos.scss
@@ -2,4 +2,253 @@
 @import './global.scss';
 @import './header.scss';
 @import './footer.scss';
-@import './style-quienesSomos';
+// @import './style-quienesSomos';
+
+.lista1 {
+    font-size: 20px;
+    padding: 0 8px;
+    margin: 0 10px;
+    border-radius: 15px;    
+    background-color: rgba(255,255,255,0.2);
+    font-weight: bold;
+}
+
+.container-area {
+    display: grid;
+    gap: 15px;
+    
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 1fr;
+
+    grid-template-areas: 
+        "logo lista lista lista" /*son nombre*/
+        ;
+
+    align-items: center;
+}
+
+nav {
+    grid-area: lista;
+}
+
+aside {
+    grid-area: logo;
+}
+
+.hero { 
+    background-image: url('./img/5065282.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 300px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 50px;
+}
+
+.hero__buttom {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+    margin-top: 15px;
+    font-size: 18px;
+
+}    
+
+.hero__buttom--pointer {
+    padding: 10px 50px;
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: black;
+}
+
+.mision { 
+    height: 350px;
+    color: white;
+    display: grid;
+    padding: 0 50px;
+    background-color: rgb(22, 98, 121);
+
+}
+
+div article h3 {
+    margin-top: 30px;
+    text-align: center;
+}
+
+div article p {
+    display: grid;
+    font-size: 16px;
+    margin: 50px 20px;
+    justify-items: center;
+
+}
+
+.mision-grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    margin-top: 15px;
+    
+}
+
+.mision-grid__text {
+    font-size: 16px;
+    margin: 0 40px;
+}
+
+.contacto { 
+    height: 200px;
+    color: black;
+    background-color: silver;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 50px;
+}
+
+.contacto-grid__text {
+    text-align: center;
+}
+
+/*ESTRATEGIA MOBILE LAST*/
+@media (max-width: 1180px) {
+
+    .lista1 {
+        font-size: 15px;
+        text-align: center;
+    }
+
+}
+
+div article:hover {
+
+    background-image: linear-gradient(to top, rgb(22, 98, 121), black, rgb(22, 98, 121));
+    transition: all, 2s;
+
+}
+
+@media (max-width: 1048px) {
+    header nav div span {
+        display: none;
+    }
+
+    .hero__buttom {
+        font-size: 15px;
+    }
+
+    .info__buttom {
+        font-size: 15px; 
+    }
+}
+
+@media (max-width: 991px) {
+    .mision { 
+        height: 700px;
+    
+    }
+}
+
+@media (max-width: 967px) {
+    body {
+        font-size: 120%;
+    }
+    
+    header div aside img {
+        width: 50px;
+    }
+    
+    header nav ul li a {
+        padding: 8px 12px;
+        margin: 0 10px;
+        font-size: 15px;
+        border-radius: 20px;
+        background-color: rgba(255,255,255,0.2);
+        font-weight: bold;
+        text-decoration: none;
+        color: white;
+    }
+
+    footer { 
+        font-size: 20px;
+
+    }
+
+}
+
+@media (max-width: 799px) {
+
+    body {
+        font-size: 120%;
+    }
+
+    header nav {
+        display: none;
+    }
+
+    header span {
+        display: block;
+    }
+
+    .container-area {
+        display: flex;    
+    }
+
+    .mision {
+        height: 800px;
+    }
+
+}
+
+@media (max-width: 600px) {
+
+    .hero {
+        text-align: center;
+    }
+  
+    .mision {
+        grid-template-columns: repeat(1, 1fr);
+        height: 850px;
+    }
+
+    footer p {
+        font-size: 10px;
+    }
+
+}
+
+@media (max-width: 505px) {
+
+    section div p {
+        font-size: 15px;
+    }
+
+    .mision {
+        height: 1000px;
+    }
+
+    section div span {
+        font-size: 10px;
+    }
+
+    footer p {
+        font-size: 10px;
+    }
+
+}
+
+@media (max-width: 400px) {
+
+    .mision {
+        height: 1300px;
+    }
+
+
+}
