--- a/scss/style-servicios.scss
+++ b/scss/style-servicios.scss
@@ -63,7 +63,7 @@ aside {
     color: white;
     display: grid;
     
-    padding: 0 50px;
+    padding: 30px 50px;
     background-color: rgb(22, 98, 121);
 
 }
