--- a/scss/style-home.scss
+++ b/scss/style-home.scss
@@ -329,10 +329,13 @@ div form:hover {
 @media (max-width: 370px) {
     .info {
         height: 500px;
-        align-items: center;
-        text-align: center;
 
+        div h3 {
+            margin-right: 50px;
+        }
+        span p {
+            margin-right: 50px;
+        }    
     }
 
-   
 }
