--- a/scss/style-home.scss
+++ b/scss/style-home.scss
@@ -11,7 +11,7 @@
     grid-auto-rows: 1fr;
 
     grid-template-areas: 
-        "logo lista lista lista" /*son nombre*/
+        "logo lista lista lista"
         ;
 
     align-items: center;
@@ -78,7 +78,6 @@ aside {
     color: white;
 }
 
-/*BOX MODEL*/
 .boxModel {
     display: flex;
     align-items: center;
@@ -115,7 +114,6 @@ div article:hover {
     height: 400px;
     color: black;
     display: grid;
-    /* grid-template-areas: "boton texto texto";*/
     grid-template-columns: repeat(2, 1fr); 
     justify-items: center;
     align-items: center;
@@ -125,9 +123,7 @@ div article:hover {
 }
 
 .info__item--big {
-    /*inicia fila. inicia columna, termina fila, termina columna */
     grid-area: 1 / 1 / 2 / 2; 
-    /* place-self: center; */
 
     background-image: linear-gradient(45deg, #406882, #b1d0e0);
     display: flex;
@@ -157,23 +153,6 @@ div article:hover {
 
 }    
 
-// .hero__buttom--pointer {
-//     padding: 10px 50px;
-//     cursor: pointer;
-//     color: white;
-//     font-weight: bold;
-//     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-//     background-color: black;
-// }
-
-
-/* div form {
-    animation: move 5s infinite linear;
-}
-
-div form:hover {
-    animation: none;
-} */
 
 @keyframes move {
     from {
@@ -184,7 +163,6 @@ div form:hover {
     }
 }
 
-/*ESTRATEGIA MOBILE LAST*/
 
 @media (max-width: 1180px) {
 
@@ -229,8 +207,6 @@ div form:hover {
         color: white;
     }
     
-   
-    /*BOX MODEL*/
     .boxModel {
         background-color: black;
         text-align: center;
