--- a/scss/style-contacto.scss
+++ b/scss/style-contacto.scss
@@ -11,7 +11,7 @@
     grid-auto-rows: 1fr;
 
     grid-template-areas: 
-        "logo lista lista lista" /*son nombre*/
+        "logo lista lista lista"
         ;
 
     align-items: center;
